running minecraft servers now works added game_servers file system to store example servers

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ps-node": "^0.1.6",
+    "ws": "^8.13.0"
+  }
 }
