--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-pty": "^0.10.1",
     "ps-node": "^0.1.6",
     "ws": "^8.13.0"
   }
