--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "^14.9.0",
     "node-pty": "^0.10.1",
+    "sqlite3": "^5.1.6",
     "ws": "^8.13.0"
   }
 }
