--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@fontsource/public-sans": "^4.5.12",
+    "@mui/icons-material": "^5.11.16",
     "@mui/joy": "^5.0.0-alpha.78",
     "discord.js": "^14.9.0",
     "next": "^13.4.0",
