added system monitoring page, shows cpu usage as a chart

--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@fontsource/public-sans": "^4.5.12",
     "@mui/icons-material": "^5.11.16",
     "@mui/joy": "^5.0.0-alpha.78",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "discord.js": "^14.9.0",
     "next": "^13.4.0",
     "next-auth": "^4.22.1",
+    "node-os-utils": "^1.3.7",
     "node-pty": "^0.10.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
