--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource/public-sans": "^4.5.12",
     "@mui/icons-material": "^5.11.16",
     "@mui/joy": "^5.0.0-alpha.78",
+    "chart.js": "^4.3.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "discord.js": "^14.9.0",
     "next": "^13.4.0",
