--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "@types/react": "18.2.5",
-    "typescript": "5.0.4"
+    "@types/node": "^20.1.4",
+    "@types/react": "18.2.5"
   }
 }
