--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.1.4",
-    "@types/react": "18.2.5"
+    "@types/react": "18.2.5",
+    "typescript": "^5.0.4"
   }
 }
