--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   "devDependencies": {
     "@types/node": "^20.1.4",
     "@types/react": "18.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "eslint": "^8.40.0",
     "typescript": "^5.0.4"
   }
 }
