changed function path

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "api/auth/[...nextauth].ts": {
+    "pages/api/auth/[...nextauth].ts": {
       "maxDuration": 30
     }
   }
